<resources>
    <string name="app_name">MAD_PROJECT_GENDER</string>
    <string name="title_activity_h1">h1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="articals">ARTICALS</string>
    <string name="change_language">Change Language</string>
    <string name="new_then_register_now">New? Then REGISTER now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="LOGIN">LOGIN</string>
    <string name="d_r_vora">Dr.Mevadawala</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_buddy">Welcome Buddy</string>
    <string name="member_then_login_now">MEMBER? Then LOGIN now</string>
    <string name="artical_1">Artical 1</string>
    <string name="artical_2">Artical 2</string>
    <string name="artical_3">Artical 3</string>
    <string name="artical_4">Artical 4</string>
    <string name="artical_5">Artical 5</string>
    <string name="gender">Gender</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="age">Age</string>
    <string name="appoint">Appoint</string>
    <string name="back">Back</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="_29_feb_3034">29/feb/3034</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="general">General</string>
    <string name="starts_from_10">Starts from 10/-</string>
    <string name="allergic">Allergic</string>
    <string name="starts_from_700">Starts from 700/-</string>
    <string name="skin">SKIN</string>
    <string name="covid">Covid</string>
    <string name="antibody">ANTIBODY</string>
    <string name="nai_karavu">Nai karavu?</string>
    <string name="lab_test">Lab Test</string>
    <string name="dava_lailo_n_friends">DAVA LAILO \n FRIENDS</string>
    <string name="chat_n_with_doctors">Chat \n with DOCTORS</string>
    <string name="personal_details">Personal Details</string>
    <string name="blood_test">BLOOD TEST</string>
    <string name="biopsy">BIOPSY</string>
    <string name="skin_test">SKIN TEST</string>
    <string name="body_fluid">BODY FLUID</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_2500_get_15_off"><![CDATA[Buy >2500/- , Get 15% off]]></string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_physicians">Family Physicians</string>
    <string name="dietician">Dietician</string>
    <string name="dentist">Dentist</string>
    <string name="surgen">Surgen</string>
    <string name="cardiologist">Cardiologist</string>
</resources>